Add export JAVA_TOOL_OPTIONS in entrypoint.sh