@@ -1,4 +1,7 @@
 #!/bin/bash
+
+
+
 set -e
 sed -i 's/name="entity_ds_host" value="127.0.0.1"/name="entity_ds_host" value="'$Moqui_DB_HOST'"/g' $CONF_FILE
 sed -i 's/name="webapp_http_host" value=""/name="webapp_http_host" value="'$Moqui_HOST'"/g' $CONF_FILE
@@ -10,6 +13,8 @@ sed -i 's/name="entity_ds_database" value="moqui"/name="entity_ds_database" valu
 #Timezone Setting
 sed -i 's|name="default_time_zone" value=""|name="default_time_zone" value="'$TIME_ZONE'"|g' $CONF_FILE
 sed -i 's|name="database_time_zone" value=""|name="database_time_zone" value="'$TIME_ZONE'"|g' $CONF_FILE
+
+export JAVA_TOOL_OPTIONS="--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
 
 $SLEEP
 
